--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/index.js"
+    "dev": "node dist/index.js",
+    "dev:watch": "nodemon dist/index.js && tsc -w",
+    "build": "tsc -b",
+    "start": "node dist/index.js"
+
   },
   "keywords": [],
   "author": "",
